<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BUTTON WARS!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_gaim">MainActivity</string>
    <string name="welcome">Welcome, to Sams Glorious button pressing game!
        To play, press the +1 button to add points to your score, and the -1 button to take
        points away from your opponent! first one to 20 wins!  Good luck!</string>
    <string name="player1">Player One Display Name</string>
    <string name="player2">Player Two Display Name</string>
    <string name="button">Lets Play!</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="plus">+1</string>
    <string name="minus">-1</string>
    <string name="p1">0</string>
    <string name="p2">0</string>
    <string name="p1scoretitle">Nameys Score</string>
    <string name="p2scoretitle">Bobs Score</string>
    <string name="yname">Your Score:</string>
    <string name="p1name">Namey</string>
    <string name="p2name">Bob</string>
    <string name="score">Score:</string>
    <string name="your">Your</string>
    <string name="title_activity_main_win">Winner!</string>
    <string name="congrats">Congradulations,</string>
    <string name="won">YOU WON!!</string>
    <string name="lost">YOU LOST!!</string>
    <string name="inf">Infinate points</string>
    <string name="stuff">Number of Possiable Points</string>


</resources>
