<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainGaim">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p1name"
            android:id="@+id/p1name"
             />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p2name"
            android:id="@+id/p2name"
            android:layout_above="@+id/p1name"
            android:layout_centerHorizontal="true"
            android:rotation="180"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/score"
            android:id="@+id/p1scoretitle"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/p1name"
            android:layout_toLeftOf="@+id/p1name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p1"
            android:id="@+id/textView2"
            android:layout_centerInParent="@+id/p2name"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/p1scoretitle"
            android:layout_alignRight="@+id/p1scoretitle"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:id="@+id/p1minus"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/p1name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p2"
            android:id="@+id/textView3"
            android:layout_above="@+id/p1minus"
            android:layout_toRightOf="@+id/p1name"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/button"
            android:layout_below="@+id/textView2"
            android:layout_toLeftOf="@+id/p1name"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/button2"
            android:rotation="180"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/p1name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your"
            android:id="@+id/textView4"
            android:rotation="180"
            android:layout_above="@+id/p2name"
            android:layout_alignRight="@+id/textView5"
            android:layout_marginBottom="37dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Bob's"
            android:id="@+id/textView"
            android:layout_above="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/score"
            android:id="@+id/textView5"
            android:layout_alignBaseline="@+id/p1scoretitle"
            android:layout_alignBottom="@+id/p1scoretitle"
            android:layout_alignLeft="@+id/textView3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your"
            android:id="@+id/textView6"
            android:layout_above="@+id/textView5"
            android:layout_alignRight="@+id/textView2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/score"
            android:id="@+id/textView7"
            android:layout_above="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:rotation="180"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/score"
            android:id="@+id/textView8"
            android:rotation="180"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/button"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:id="@+id/button3"
            android:rotation="180"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignLeft="@+id/textView8"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Namey's"
            android:id="@+id/textView9"
            android:rotation="180"
            android:layout_below="@+id/textView8"
            android:layout_alignRight="@+id/textView8"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p1"
            android:id="@+id/textView10"
            android:layout_centerInParent="@+id/p2name"
            android:layout_above="@+id/textView8"
            android:layout_alignRight="@+id/textView6"
            android:rotation="180"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/p2"
            android:id="@+id/textView11"
            android:layout_above="@+id/textView7"
            android:layout_alignLeft="@+id/button2"
            android:rotation="180"/>

</RelativeLayout>
